<resources>
    <string name="app_name">Rolê no IF</string>
    <string name="facebook_app_id">258187838100710</string>
    <string name="fb_login_protocol_scheme">fb2201511016836012</string>

    <string name="cancel_login">Operação cancelada.</string>
    <string name="error_login">Erro ao logar.</string>
    <string name="bem_vindo">Seja Bem-Vindo!</string>
    <string name="suc_cadastro">Cadastrado com sucesso.</string>

    <string name="btn_TV">Qual Curso Técnico mais combina com você?</string>
    <string name="btn_Agro">Conheça o curso de Agropecuária</string>
    <string name="btn_Tour">Tour pelo IF</string>
    <string name="btn_Visita">Agende uma Visita</string>

    <string name="txt_Titulo">Qual Curso Técnico Integrado mais combina com você?</string>
    <string name="txt_Resumo">Dúvida sobre qual curso escolher? Faça o teste e descubra qual sugestão temos pra você.</string>
    <string name="btn_Iniciar">INICIAR</string>
    <string name="branco_cadastro">Preencha todos os campos!</string>
    <string name="btn_Provas">Exemplos de Provas</string>
    <string name="btn_Cursos">Cursos Técnicos do IF - RP</string>
    <string name="btnP1">Prova do Processo Seletivo 2019</string>
    <string name="btnP2">Prova do Processo Seletivo 2018</string>
    <string name="btnP3">Prova do Processo Seletivo 2017</string>

</resources>
